# Univ_C2022_OpenSource

./: README.md  count2.bash  menu.bash  perm2.bash  power.bash
bashStudy/: bool.bash  builtin.bash  count1.bash  declare.bash  filecal1.bash  filecal2.bash  invite.bash  lshead.bash  perm1.bash  reply.bash  rhead.bash  score2.bash  state.bash  wc1.bash  wc2.bash
makeStudy/: copy.c  copy.h  main.c
makeStudy/HW5/: HW5.out  copy.c  main.c
makeStudy/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  hello.cpp
makeStudy/cmake/library_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libtest  test.cpp  test_lib.h
makeStudy/cmake/library_test/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_lib.cpp
makeStudy/make/: CMakeLists.txt  Makefile  hello.c  hello.out  myprog.c  myprog.out
